libs/preprocessor/tests/errors/pe8_if_undefined/stderr.ansi
[0m[1m[38;5;9merror[PE8][0m[1m: attempted to use `#if` on an undefined macro[0m
  [0m[36m┌─[0m source.hpp:1:5
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #if [0m[31marma[0m
  [0m[36m│[0m     [0m[31m^^^^[0m [0m[31mundefined macro `arma`[0m

